--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "acorn-walk": "^8.2.0",
+    "astring": "^1.8.6",
+    "meriyah": "^4.3.7"
   }
 }
