--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "watch": "tsc --watch"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@swc/core": "^1.3.78",
     "@swc/jest": "^0.2.29",
     "@tsconfig/node16": "^16.1.0",
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
