--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "ts-node": {
     "swc": true
