--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "packageManager": "yarn@3.6.1",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "lint": "eslint src",
     "test": "jest src",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch -p tsconfig.build.json"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
@@ -16,6 +16,7 @@
     "@tsconfig/node16": "^16.1.0",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.0",
+    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@typescript-eslint/utils": "^6.4.0",
@@ -23,6 +24,7 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.0.2",
+    "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
