--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/utils": "^6.4.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
+    "fast-glob": "^3.3.1",
     "jest": "^29.6.2",
     "prettier": "^3.0.2",
     "tmp": "^0.2.1",
