--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
   "ts-node": {
     "swc": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["src/coverage/**/*"]
 }
