--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "prepack": "tsc -p tsconfig.build.json",
     "lint": "eslint src",
-    "test": "jest src",
+    "test": "jest",
     "watch": "tsc --watch -p tsconfig.build.json"
   },
   "devDependencies": {
@@ -33,12 +33,14 @@
     "@swc/core": "^1.3.78",
     "@swc/jest": "^0.2.29",
     "@tsconfig/node16": "^16.1.0",
+    "@types/caller": "^1.0.0",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.0",
     "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "@typescript-eslint/utils": "^6.4.0",
+    "caller": "^1.1.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "fast-glob": "^3.3.1",
@@ -53,5 +55,8 @@
     "astring": "^1.8.6",
     "chalk": "<5",
     "meriyah": "^4.3.7"
-  }
+  },
+  "workspaces": [
+    "test/jest"
+  ]
 }
