--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^3.0.2",
     "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
+    "type-fest": "^4.3.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
