--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "caller": "^1.1.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "fast-glob": "^3.3.1",
     "jest": "^29.6.2",
     "prettier": "^3.0.2",
