--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/sqlite3": "^3.1.11",
     "acorn-walk": "^8.2.0",
     "astring": "^1.8.6",
     "chalk": "<5",
@@ -73,6 +74,7 @@
     "test/jest",
     "test/mocha",
     "test/vitest",
-    "test/postgres"
+    "test/postgres",
+    "test/sqlite"
   ]
 }
