test: Add tests for vanilla node:http server
Also, make sure to always use 127.0.0.1 instead of localhost
to avoid IPv6 vs IPv4 ambiguity.

--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "source-map-js": "^1.0.2"
   },
   "workspaces": [
-    "test/express",
     "test/httpClient",
+    "test/httpServer",
     "test/jest",
     "test/mocha",
     "test/vitest",
