--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,20 @@ jobs:
       matrix:
         node-version: [18, 20, 21]
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -23,6 +37,8 @@ jobs:
           node-version: ${{matrix.node-version}}
       - run: yarn
       - run: yarn test
+        env:
+          POSTGRES_URL: postgres://postgres:postgres@localhost:5432
 
   release:
     runs-on: ubuntu-latest
