--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           node-version: ${{matrix.node-version}}
       - run: yarn
+      - run: node test/smoketest.mjs
       - run: yarn test
         env:
           POSTGRES_URL: postgres://postgres:postgres@localhost:5432
