--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "/dist"
   ],
   "main": "./dist/bin.js",
+  "loader": "./dist/webpack.js",
   "bin": "bin/appmap-node.js",
   "repository": {
     "type": "git",
@@ -55,7 +56,10 @@
     "eslint-plugin-prettier": "^5.0.1",
     "fast-glob": "^3.3.1",
     "jest": "^29.6.2",
+    "next": "^14.0.4",
     "prettier": "^3.0.2",
+    "react": "^18",
+    "react-dom": "^18",
     "semantic-release": "^22.0.5",
     "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
