--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+      mongodb:
+        image: mongo
+        ports:
+          - 27017:27017
 
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +44,7 @@ jobs:
       - run: yarn test
         env:
           POSTGRES_URL: postgres://postgres:postgres@localhost:5432
+          MONGODB_URI: mongodb://localhost:27017
 
   windows-test:
     runs-on: windows-latest
