--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "fast-glob": "^3.3.1",
     "jest": "^29.6.2",
+    "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "prettier": "^3.0.2",
     "react": "^18",
