--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
+    "@prisma/client": "^5.9.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@swc/core": "^1.3.78",
@@ -85,6 +86,7 @@
     "test/postgres",
     "test/sqlite",
     "test/next",
-    "test/typescript-esm"
+    "test/typescript-esm",
+    "test/prisma"
   ]
 }
