--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
     "acorn-walk": "^8.2.0",
     "astring": "^1.8.6",
     "chalk": "<5",
+    "json5": "^2.2.3",
     "meriyah": "^4.3.7",
     "source-map-js": "^1.0.2",
-    "strip-json-comments": "^3",
     "yaml": "^2.3.4"
   },
   "workspaces": [
