refactor: Expose AppMap types
- Renamed AppMap.d.ts to AppMap.ts to get the declaration file
  created automatically and put into dist in packing.
- Removed namespace declaration inside AppMap.d.ts to expose
  the types inside to the clients.
- Changed internal importers' import declarations to
  import type * as AppMap from ./AppMap so they can use the
  types with AppMap qualifier as before.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,18 @@
   "main": "./dist/bin.js",
   "loader": "./dist/webpack.js",
   "bin": "bin/appmap-node.js",
+  "exports": {
+    ".": {
+      "require": {
+        "default": "./dist/facade.js",
+        "types": ["./dist/facade.d.ts"] 
+      },
+      "import": {
+        "default": "./dist/facade.js",
+        "types": ["./dist/facade.d.ts"] 
+      }
+    } 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/getappmap/appmap-node.git"
