--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node18",
   "compilerOptions": {
+    "declaration": true,
     "outDir": "dist",
     "noImplicitAny": true,
     "sourceMap": true,
