feat: Instrument calls to libraries

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "test/sqlite",
     "test/next",
     "test/typescript-esm",
-    "test/prisma"
+    "test/prisma",
+    "test/libraryCalls"
   ]
 }
