--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/mysql": "^2.15.24",
     "@types/node": "^20.5.0",
     "@types/pg": "^8.10.9",
+    "@types/ps-tree": "^1.1.6",
     "@types/sqlite3": "^3.1.11",
     "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
