--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "test/next",
     "test/typescript-esm",
     "test/prisma",
-    "test/libraryCalls"
+    "test/libraryCalls",
+    "test/sourceMapPath"
   ]
 }
