--- a/test/simple/appmap.yml
+++ b/test/simple/appmap.yml
@@ -1,7 +1,8 @@
 name: simple
 appmap_dir: tmp/appmap
 packages:
-- path: .
-  exclude:
-  - skipped
-  - A.skippedMethod
+  - path: .
+    exclude:
+      - skipped
+      - A.skippedMethod
+language: javascript
