fix: Import-attributes support
Note: should be bumped to upstream once
https://github.com/davidbonnet/astring/pull/713 is merged.

- Upgrades Meriah to v5 to support import-attributes.
- Replaces assert keword of old import-assertions with
  "with" keyword of import-attributes for json before
  parsing code with Meriah because Meriah does not support
  import-assertions.
- Replaces Astring library with the forked version
  modifed to support import-attributes.
- Adds a test which passes with the fix and fails with
  "Unexpected token: 'identifier'" error message which
  is encountered while running CyberChef project tests
  with appmap-node.

--- a/package.json
+++ b/package.json
@@ -87,10 +87,10 @@
   "dependencies": {
     "@types/stack-utils": "^2.0.3",
     "acorn-walk": "^8.2.0",
-    "astring": "^1.8.6",
+    "astring": "https://github.com/getappmap/astring.git#v1.8.6-import-attributes",
     "chalk": "<5",
     "json5": "^2.2.3",
-    "meriyah": "^4.3.7",
+    "meriyah": "^5.0.0",
     "source-map-js": "^1.0.2",
     "stack-utils": "^2.0.6",
     "yaml": "^2.3.4"
