--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "dependencies": {
     "@types/stack-utils": "^2.0.3",
     "acorn-walk": "^8.2.0",
-    "astring": "https://github.com/getappmap/astring.git#v1.8.6-import-attributes",
+    "astring": "^1.9.0",
     "chalk": "<5",
     "json5": "^2.2.3",
     "meriyah": "^5.0.0",
