--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "watch": "tsc --watch -p tsconfig.build.json"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@jest/types": "^29.6.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -64,14 +65,12 @@
     "@types/ps-tree": "^1.1.6",
     "@types/sqlite3": "^3.1.11",
     "@types/tmp": "^0.2.3",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "@typescript-eslint/utils": "^6.4.0",
     "caller": "^1.1.0",
-    "eslint": "^8.47.0",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.5.0",
     "fast-glob": "^3.3.1",
+    "globals": "^15.0.0",
     "jest": "^29.6.2",
     "mongodb": "^6.3.0",
     "next": "^14.0.4",
@@ -82,7 +81,8 @@
     "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
     "type-fest": "^4.3.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
     "@types/stack-utils": "^2.0.3",
