--- a/test/postgres/appmap.yml
+++ b/test/postgres/appmap.yml
@@ -1,8 +1,8 @@
-name: mongo-appmap-node-test
+name: postgresql-appmap-node-test
+language: javascript
 appmap_dir: tmp/appmap
 packages:
   - path: .
     exclude:
       - node_modules
       - .yarn
-language: javascript
