--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
+          node-version: 24
           cache: yarn
+          registry-url: https://registry.npmjs.org
       - run: yarn
       - run: npm publish --provenance
